fix unauthorised problem

--- a/product-service/product-service/src/main/resources/application.properties
+++ b/product-service/product-service/src/main/resources/application.properties
@@ -20,6 +20,6 @@ spring.data.mongodb.uri=mongodb://mongodb:27017/product-service
 management.endpoints.web.exposure.include=*
 
 # Keycloak (OAuth2 Resource Server)
-
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://host.docker.internal:8180/realms/microservices-realm
+# Keycloak (OAuth2 Resource Server)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/microservices-realm
 spring.security.oauth2.resourceserver.jwt.audiences=api-gateway
